logo align issue

--- a/src/app/all-locations/all-locations.page.scss
+++ b/src/app/all-locations/all-locations.page.scss
@@ -48,7 +48,7 @@ ion-content {
 				display: inline-block;
 				color: var(--black);
 				padding: 0px;
-				text-transform: capitalize;
+				// text-transform: capitalize;
 				&:after {
 					width: 0;
 					height: 0;
