--- a/src/global.scss
+++ b/src/global.scss
@@ -447,7 +447,7 @@ ion-header {
                 border: 0px;
                 border-radius: 0px;
                 --background: transparent;
-                width: 100%;
+                // width: 100%;
                 height: auto;
                 display: flex;
                 justify-content: center;
